[package]
name = "slack-upload"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.43", default-features = false, features = ["rt-multi-thread", "macros", "signal"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
url = { version = "2.5", features = ["serde"]}
trait-variant = "0.1"
